# website_scan

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  commands.txt  docker-compose.yml  requirements-dev.txt  requirements.txt  run.py  start.bat
webscan/: .env.example  pyproject.toml  suppression.yaml
webscan/agents/: ai_endpoint_agent.py  base_agent.py  recon_agent.py  reporter_agent.py  visualizer_agent.py  web_checks_agent.py
webscan/api/: main.py  schemas.py
webscan/api/middleware/: rate_limiter.py
webscan/api/routers/: report.py  scan.py
webscan/checks/: base.py
webscan/checks/ai_endpoint/: __init__.py  content_type.py  cors_check.py  data_retention_policy.py  error_leakage.py  jailbreak_posture.py  openapi_discovery.py  pii_signal.py  prompt_injection_rubric.py  rate_limit_headers.py  tls_auth.py
webscan/checks/website/: __init__.py  banner_leakage.py  cookie_flags.py  cors_posture.py  http_headers.py  misconfig_hints.py  redirect_chain.py  robots_sitemap.py  sensitive_paths.py  tech_fingerprint.py  tls_cert.py
webscan/config/: defaults.py  logging_config.py  settings.py
webscan/core/: audit_log.py  deduplication.py  finding_store.py  interfaces.py  models.py  orchestrator.py  ssrf_guard.py
webscan/reporter/: json_reporter.py  pdf_reporter.py  sarif_reporter.py
webscan/tests/: conftest.py
webscan/tests/integration/: test_api.py  test_orchestrator.py
webscan/tests/unit/: test_checks_ai.py  test_checks_website.py  test_models.py  test_reporter.py
webscan/ui/: app.py
webscan/ui/components/: finding_card.py  severity_heatmap.py  weak_points_map.py
webscan/ui/pages/: dashboard_page.py  input_page.py  progress_page.py
